@@ -4140,6 +4140,8 @@ int util_write_configfile(void)
 
   if (setting_process_switcher_immutable.v)     ADD_STRING_CONFIG,"--process-switcher-immutable");
 
+  if (setting_process_switcher_always_visible.v)     ADD_STRING_CONFIG,"--process-switcher-always-visible");
+
   if (menu_allow_background_windows)          ADD_STRING_CONFIG,"--allow-background-windows");
 
   if (always_force_overlay_visible_when_menu_closed) ADD_STRING_CONFIG,"--allow-background-windows-closed-menu");
