@@ -26,6 +26,7 @@ Improved ZX Vision:
 - Improve window title background when not all buttons are visible
 - Menus can no longer be minimized (that had no sense)
 - Process switcher: unminimize windows when selecting them and they were minimized
+- Process switcher: now it can be set to be always visible
 
 Improved ZX Desktop:
 - Allow to set parameters when redefining upper buttons, for some actions like openwindow or set machine
